force-app/main/default/objects/FinishedGoods__c/FinishedGoods__c.object-meta.xml
<CustomObject>
    <label>Finished Goods</label>
    <nameField>
        <label>Finished Goods Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finished Goods</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>