force-app/main/default/objects/FinishedGoods__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName> 
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>  
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Finished Goods</relationshipLabel>
    <relationshipName>Finished_Goods</relationshipName>
    <type>Lookup</type>
</CustomField>
 