force-app/main/default/objects/FinishedGoods__c/fields/CustomerSteelGradeNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerSteelGradeNumber__c</fullName> 
    <label>Customer Steel Grade Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>
 