force-app/main/default/objects/FinishedGoods__c/fields/Degassing__c.field-meta.xml
<CustomField>
    <fullName>Degassing__c</fullName> 
    <label>Degassing</label>
    <length>1</length>
    <type>Text</type>
</CustomField>
 