force-app/main/default/objects/FinishedGoods__c/fields/DimensionA__c.field-meta.xml
<CustomField>
    <fullName>DimensionA__c</fullName>
    <label>Dimension A</label>
    <precision>11</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>