force-app/main/default/objects/FinishedGoods__c/fields/HeatTreatment__c.field-meta.xml
<CustomField>
    <fullName>HeatTreatment__c</fullName>
    <label>Heat Treatment (St.29+30)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>