force-app/main/default/objects/FinishedGoods__c/fields/MaterialNumber__c.field-meta.xml
<CustomField>
    <fullName>MaterialNumber__c</fullName>
    <description>Capture SAP Material numbers for a finished product</description>
    <externalId>true</externalId>
    <label>Material Number</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>