force-app/main/default/objects/FinishedGoods__c/fields/MaterialText__c.field-meta.xml
<CustomField>
    <fullName>MaterialText__c</fullName>
    <label>Material Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>