force-app/main/default/objects/FinishedGoods__c/fields/PeelRodWire__c.field-meta.xml
<CustomField>
    <fullName>PeelRodWire__c</fullName>
    <label>Peeling bar/ wire rod (St.33)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>