force-app/main/default/objects/FinishedGoods__c/fields/PrimRollingHomogenize__c.field-meta.xml
<CustomField>
    <fullName>PrimRollingHomogenize__c</fullName>
    <label>Prim. Rolling - Homogenize (St.15)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>