force-app/main/default/objects/FinishedGoods__c/fields/PrimRollingInputFormat__c.field-meta.xml
<CustomField>
    <fullName>PrimRollingInputFormat__c</fullName>
    <label>Prim. Rolling - Input format (St.16-18)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>