force-app/main/default/objects/FinishedGoods__c/fields/RollingMill__c.field-meta.xml
<CustomField>
    <fullName>RollingMill__c</fullName>
    <label>Rolling Mill</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>