force-app/main/default/objects/FinishedGoods__c/fields/SELNumber__c.field-meta.xml
<CustomField>
    <fullName>SELNumber__c</fullName>
    <description>Capture SAP Material numbers for a fiished product</description>
    <label>SEL Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>