force-app/main/default/objects/FinishedGoods__c/fields/SteelGrade__c.field-meta.xml
<CustomField>
    <fullName>SteelGrade__c</fullName>
    <label>Steel Grade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>