force-app/main/default/objects/FinishedGoods__c/fields/SteelGradeLookup__c.field-meta.xml
<CustomField>
    <fullName>SteelGradeLookup__c</fullName> 
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Steel Grade</label>
    <referenceTo>SteelGrade__c</referenceTo>
    <relationshipLabel>Finished Goods (Steel Grade)</relationshipLabel>
    <relationshipName>Finished_Goods</relationshipName>
    <type>Lookup</type>
</CustomField>