force-app/main/default/objects/FinishedGoods__c/fields/Straightening__c.field-meta.xml
<CustomField>
    <fullName>Straightening__c</fullName>
    <label>Straightening / SurfaceTreat. (St.31)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>