force-app/main/default/objects/FinishedGoods__c/fields/SurfaceDefectInspec__c.field-meta.xml
<CustomField>
    <fullName>SurfaceDefectInspec__c</fullName>
    <label>Inspec.-Surface defect inspec.(St.38+39)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>