force-app/main/default/objects/FinishedGoods__c/fields/USInspection__c.field-meta.xml
<CustomField>
    <fullName>USInspection__c</fullName>
    <label>Inspec.- US Inspection (St.40-42)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>